Facade에서 작성자 조회 통합 및 Controller 간소화